--- a/src/styles/_navs.scss
+++ b/src/styles/_navs.scss
@@ -1,31 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
 /* Variables */
-@import '_variables.scss';
+@import "_variables.scss";
 
 .navbar {
-    box-shadow: $shadow-color;
-    background-color: $light-color !important;
-    padding: 1em;
-  
-    .navbar-brand {
-      font-family: 'Pacifico', sans-serif;
-      color: $dark-color;
-    }
-  }
-  
-  .nav {
-    margin-bottom: 10px;
-  
-    .nav-link {
-      color: $dark-color;
-      margin: 0px 5px;
-      transition:  background-color 0.3s;
-      border-radius: 0.5rem;
-  
-      &:hover {
-        background-color: #E3E3E3;
-        color: $dark-color;
-      }
-    }
-  }
+	box-shadow: $shadow-color;
+	background-color: $light-color !important;
+	padding: 1em;
+
+	.navbar-brand {
+		font-family: "Pacifico", sans-serif;
+		color: $dark-color;
+	}
+}
+
+.nav {
+	margin-bottom: 10px;
+
+	.nav-link {
+		color: $dark-color;
+		margin: 0px 5px;
+		transition: background-color 0.3s;
+		border-radius: 0.5rem;
+
+		&:hover {
+			background-color: #e3e3e3;
+			color: $dark-color;
+		}
+	}
+}
